# sierraProject

./: .gitignore  README.md  package-lock.json  pyproject.toml
src/sierraproject/: main.py  old_agents_and_tasks.yaml  testDemoBrowserbase.py  test_browserbase_connection.py  test_verification_tool.py  testingID.py
src/sierraproject/crews/poem_crew/config/: agents.yaml
src/sierraproject/crews/sierra_crew/: sierraCrew.py
src/sierraproject/crews/sierra_crew/config/: agents.yaml  tasks.yaml
src/sierraproject/mcp-servers/stagehand/: package-lock.json
src/sierraproject/tools/: CustomLoginTool.py  mcp_config.py  stagehand_client.py  stagehand_client.py.old  verification_code_input_tool.py
tmp/.cache/: llm_calls.json
