[project]
name = "sierraproject"
version = "0.1.0"
description = "sierraProject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==0.140.0",
    "stagehand-py>=0.3.10",
]

[project.scripts]
kickoff = "sierraproject.main:kickoff"
run_crew = "sierraproject.main:kickoff"
plot = "sierraproject.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
